--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy --prod --dir=dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": false
+  },
   "devDependencies": {
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "typescript": "^4.9.5",
+    "vite": "^4.2.1",
+    "vite-plugin-checker": "^0.5.6"
   },
   "dependencies": {
     "git": "^0.1.5",
